# hiperhealth

./: .all-contributorsrc  .gitignore  .makim.yaml  .pre-commit-config.yaml  404.html  DEVELOPMENT.md  README.md  alembic.ini  index.html  objects.inv  pyproject.toml  sitemap.xml
.envs/: .env.tpl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yaml  main.yaml  reviewer-pr.yaml
api/: index.html
api/SUMMARY/: index.html
api/agents/: index.html
api/agents/client/: index.html
api/agents/diagnostics/: index.html
api/agents/diagnostics/core/: index.html
api/agents/extraction/: index.html
api/agents/extraction/medical_reports/: index.html
api/agents/extraction/wearable/: index.html
api/agents/treatments/: index.html
api/models/: index.html
api/models/sqla/: index.html
api/models/sqla/fhir/: index.html
api/models/sqlmodel/: index.html
api/models/sqlmodel/fhir/: index.html
api/schema/: index.html
api/schema/clinical_outputs/: index.html
api/schema/fhir/: index.html
api/schema/human_evaluations/: index.html
api/sdx/: index.html
api/utils/: index.html
changelog/: index.html
conda/: dev-win.yaml  dev.yaml
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  informed_consent.md  installation.md
example/: index.html
installation/: index.html
migrations/: env.py
migrations/versions/: 2cbf5c81b941_add_normalized_tables_for_research_app.py  dd144e1c8ab9_initial_migration_of_fhir_models.py
research-poc/backend/: .env.example  README.md  backend.db  requirements.txt
research-poc/backend/app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
research-poc/backend/app/uploads/: 86d3db95-d08e-4b1a-af6a-e242c93d8c97_anshu.csv
research-poc/frontend/src/: App.jsx
research-poc/frontend/src/components/: AIDiagnosis.jsx  AITest.jsx  StepOne.jsx  StepTwo.jsx  (+1 more)
research/app/: db.py  main.py  reports.py
research/app/templates/: dashboard.html  demographics.html  diagnosis.html  exams.html  lifestyle.html  patient.html  tests.html
research/models/: deidenitfier.py  repositories.py  ui.py
scripts/: migrate_json_to_db.py  seed_db.py
sdx-frontend/: index.html  package-lock.json  package.json
sdx-frontend/src/components/: Dashboard.jsx  Navbar.jsx  StepThree.jsx  StepTwo.jsx
sdx-frontend/src/i18n/: en.json  es.json
search/: search_index.json
src/hiperhealth/: __init__.py  utils.py
src/hiperhealth/privacy/: __init__.py  deidenitfier.py  deidentifier.py
src/sdx/agents/: client.py  hardware.py
src/sdx/guards/: __init__.py  topic_guard.py
src/sdx/schema/: research.py
tests/: conftest.py  test_client_guard_integration.py  test_deidentifier.py  test_dicom.py  test_dicom_extractor.py  test_guards_validator.py  test_is_float_only.py  test_repositories.py  test_research_db.py  test_research_evaluations.py  test_research_repositories.py  test_research_schema.py  test_topic_guard.py  test_utils.py
(+8 files in other folders)
