[project]
name = "sdx"
version = "0.2.0"  # semantic-release
description = "This Project aims to ..."
readme = "README.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD-3-Clause"
requires-python = ">=3.10,<4"  # widened to allow 3.13+ if deps support
dependencies = [
    "anamnesisai >=0.4.0",
    "fhir.resources >=8.1.0",
    "rago >=0.14.4",
    "pypdf >=5.4.0",
    "sqlalchemy >=2.0.41",
    "atpublic >=6",
    "sqlmodel >=0.0.24",
    "questionary >=2.1.0",
    "pillow >=11.3.0",
    "pytesseract >=0.3.13",
    "python-magic >=0.4.27",
    "presidio-analyzer (>=2.2.359,<3.0.0)",
    "presidio-anonymizer (>=2.2.359,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2", "poetry>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "sdx", from="src"},
  {include = "research", from="."},
]
include = ["src/sdx/py.typed"]

exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.2.0"
mypy = ">=1.5.0"
bandit = ">=1.7.5"
vulture = ">=2.7"
ipython = ">=8"
ipykernel = ">=6.0.0"
Jinja2 = ">=3.1.2"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.1"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = ">=0.21.2"
mkdocstrings-python = ">= 1.1.2"
mkdocs-gen-files = ">=0.5.0"
makim = "1.27.0"
virtualenv = "^20.24"
fastapi = ">=0.115"
python-multipart = ">=0.0.20"

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.mypy]
python_version = "3.10"
allow_subclassing_any = true
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "sdx.schema.fhirx"
disable_error_code = ["name-defined", "valid-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = ['docs']

[tool.ruff.lint]
select = ["E", "F", "D", "YTT", "RUF", "I001"]
fixable = ["I001", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.vulture]
exclude = ["tests"]
min_confidence = 80
paths = ["./"]
sort_by_size = true

[project.optional-dependencies]
dicom = ["pydicom >=2.5"]

[tool.poetry.group.dicom.dependencies]
# This section defines the 'dicom' dependency group used in CI via:
#   poetry install --with dicom
# The same package is also defined under [project.optional-dependencies]
# to allow user installs via:
#   poetry install -E dicom
# Keep both entries synchronized manually.
pydicom = ">=2.4.0"
